<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="210dp"
        android:layout_height="400dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="4dp">

        <TextView
            android:id="@+id/txtUploadFile"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/upload_file"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtSelectWarehouse"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/select_warehouse"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDisableEnableFreight"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/disable_enable_freight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtAddShipment"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/add_shipment"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDeleteShipment"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_shipment"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtExportWarehouseShipments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/export_warehouse_shipments"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDisplayAllShipments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/display_all_shipments"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/btnChooseFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/choose_file"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spnSelectWarehouse"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDisableEnableFreight"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_height="match_parent"
            android:text="@string/disable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnAddShipment"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDeleteShipment"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnExportWarehouseShipments"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/export"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDisplayAllShipments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/display"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/warehouse_id"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="#0B0A0A"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="@string/warehouse_name"
                android:textAlignment="center"
                android:textColor="#120F0F"
                android:textSize="26sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow>
            <TextView
                android:id="@+id/lblWarehouseId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblWarehouseName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>